[package]
name = "elemchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.0"
derive_more = "0.99.17"
rand = "0.8.4"
rayon = "1.2.1"